Split server API endpoints that returned BAP data, rename epa-user-data server endpoint, move fetched BAP data into its own client context component, and update client app to reflect re-organized fetching of BAP data
