# docs/csb-openapi.json
@@ -316,9 +316,9 @@
         "parameters": [{ "$ref": "#/components/parameters/scan" }]
       }
     },
-    "/api/epa-data": {
+    "/api/epa-user-data": {
       "get": {
-        "summary": "/api/epa-data",
+        "summary": "/api/epa-user-data",
         "responses": {
           "200": {
             "description": "OK",
@@ -365,9 +365,9 @@
         "parameters": [{ "$ref": "#/components/parameters/scan" }]
       }
     },
-    "/api/bap-data": {
+    "/api/bap-sam-data": {
       "get": {
-        "summary": "/api/bap-data",
+        "summary": "/api/bap-sam-data",
         "responses": {
           "200": {
             "description": "OK",
@@ -376,22 +376,38 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "samResults": {
+                    "results": {
                       "type": "boolean",
                       "example": true
                     },
-                    "samEntities": {
-                      "type": "array",
-                      "items": {
-                        "type": "object"
-                      }
-                    },
-                    "rebateSubmissions": {
+                    "entities": {
                       "type": "array",
                       "items": {
                         "type": "object"
                       }
                     }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [],
+        "parameters": [{ "$ref": "#/components/parameters/scan" }]
+      }
+    },
+    "/api/bap-application-submissions": {
+      "get": {
+        "summary": "/api/bap-application-submissions",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object"
                   }
                 }
               }
